--- a/makefile.single_out
+++ b/makefile.single_out
@@ -10,7 +10,7 @@ override DEBUG_FLAGS 				?=
 override DEFINES 						?= #-DPOSIX 														#for -DDEBUG and -DPROFILE, used dedicated DEFINES
 override IN_EXT 						?= .cpp
 override IN_DIR 						?= ./
-override INCLUDE_DIRS 			?= -I/usr/include/GL
+override INCLUDE_DIRS 			?= #-L/usr/include/GL
 override LIBS 							?= #-lglut -lGLU -lGL
 override PREDEF 						?= #-DDEBUG -DPROFILE -DWINDOWS 				#preprocessor defines
 override RUN_ARGS 					?= #0 1																#passed as command line args to bin on run
