general makefile for lexyacc working!

--- a/makefile.individual_out_bins
+++ b/makefile.individual_out_bins
@@ -17,6 +17,7 @@ override FFLAGS ?= -Wall -march=native -std=f95 -pedantic-errors
 
 #paths
 override IN_DIR 	?= ./
+override IN_EXTS 	?= .c .cpp .f
 override OUT_DIR 	?= _out/
 override OUT_EXT 	?= .elf
 
@@ -31,29 +32,16 @@ override PROFILE_DEFINE 		?= #-DDEBUG
 override PROFILE_FLAGS  		?= #
 override OPTIMIZE_FLAGS			?= #-O3
 
-RUN_BNAME := $(RUN)$(OUT_EXT)
+RUN_BNAME 	:= $(RUN)$(OUT_EXT)
 
-EXT:=.c
-INS:=$(wildcard $(IN_DIR)*$(EXT))
-INS_NODIR:=$(notdir $(INS))
-OUTS_NODIR:=$(patsubst %$(EXT),%$(OUT_EXT),$(INS_NODIR))
-C_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
-
-EXT:=.cpp
-INS:=$(wildcard $(IN_DIR)*$(EXT))
-INS_NODIR:=$(notdir $(INS))
-OUTS_NODIR:=$(patsubst %$(EXT),%$(OUT_EXT),$(INS_NODIR))
-CPP_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
-
-EXT:=.f
-INS:=$(wildcard $(IN_DIR)*$(EXT))
-INS_NODIR:=$(notdir $(INS))
-OUTS_NODIR:=$(patsubst %$(EXT),%$(OUT_EXT),$(INS_NODIR))
-F_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
+INS 				:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
+INS_NODIR 	:= $(notdir $(INS))
+OUTS_NODIR	:= $(patsubst %$(IN_EXT),%$(OUT_EXT),$(INS_NODIR))
+OUTS				:= $(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
 .PHONY: all mkdir clean install ubuntu_install_deps
 
-all: mkdir $(C_OUTS) $(CPP_OUTS) $(F_OUTS)
+all: mkdir $(OUTS)
 
 ubuntu_install_deps:
 	#sudo aptitude install -y libgtk-3-dev
