added flex cheat

--- a/lexyacc/lex/makefile
+++ b/lexyacc/lex/makefile
@@ -1,21 +1,12 @@
-#makes all input files in the current dir ( given by the input extension IN_EXTS)
-#into objects, and compiles all objects into an executable.
-
-#as usual, .lex and .y are first used to generate .c and only then into objects.
-
-#basenames without extensions are always kept and must be unique across extensions.
-#Example: `a.y` will become `a.o`, and `a.c` will also become `a.o`, so you can't
-#have both those files in the same project!
-
 #compiler options
 override CC			:= gcc
-override CFLAGS	?= -Wall -std=c99 -pedantic
+override CFLAGS	?= -Wall -std=c99 -pedantic -Wno-unused-function 
 
 #paths
 override AUX_DIR 						?= _out/
 override OBJ_EXT 						?= .o
 override IN_DIR 						?= ./
-override IN_EXTS 						?= .lex .y .c
+override IN_EXTS 						?= .lex .c
 override OUT_DIR 						?= $(AUX_DIR)
 override OUT_EXT 						?= .elf
 override OUT_BASENAME_NOEXT	?= a
@@ -29,29 +20,25 @@ OUT_BASENAME:= $(OUT_BASENAME_NOEXT)$(OUT_EXT)
 OUT					:= $(OUT_DIR)$(OUT_BASENAME)
 
 #bison generated header:
-BISON_H			:= $(addprefix $(AUX_DIR), $(notdir $(patsubst %.y, %.h, $(wildcard $(IN_DIR)*.y))))
 FLEX_C			:= $(addprefix $(AUX_DIR), $(notdir $(patsubst %.lex, %.c, $(wildcard $(IN_DIR)*.lex))))
 
 .PHONY: all run test mkdir clean ubuntu_install_deps
 
 all: mkdir $(OUT)
 
-.SECONDARY: $(BISON_H) $(FLEX_C)
+.SECONDARY: $(FLEX_C)
 
 $(OUT): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(OUT) -lfl
 
-$(AUX_DIR)%$(OBJ_EXT): $(IN_DIR)%.c $(BISON_H) 
+$(AUX_DIR)%$(OBJ_EXT): $(IN_DIR)%.c
 	$(CC) $(CFLAGS) -c "$<" -o "$@"
 
-$(AUX_DIR)%$(OBJ_EXT): $(AUX_DIR)%.c $(BISON_H) 
+$(AUX_DIR)%$(OBJ_EXT): $(AUX_DIR)%.c
 	$(CC) $(CFLAGS) -I. -c "$<" -o "$@"
 
 $(AUX_DIR)%.c: $(IN_DIR)%.lex
 	flex  -o "$(AUX_DIR)$*".c "$<"
-
-$(AUX_DIR)%.c $(AUX_DIR)%.h: $(IN_DIR)%.y
-	bison -v -o "$(AUX_DIR)$*".c --defines="$(AUX_DIR)$*".h "$<" 
 
 clean:
 	rm -rf "$(AUX_DIR)" "$(OUT_DIR)"
@@ -66,4 +53,4 @@ test: all
 	python test.py "$(OUT)"
 
 ubuntu_install_deps:
-	sudo aptitude install -y flex
+	sudo aptitude install -y flex bison
