--- a/makefile.individual_out_bins
+++ b/makefile.individual_out_bins
@@ -3,12 +3,12 @@
 #this is mostly for test purposes. see: ``makefile.individual_out_bins`` for a more complete makefile
 
 #c/cpp
-override CC				?= gcc
-override CXX			?= g++
+override CC			?= gcc
+override CXX		?= g++
 override CFLAGS		?= -Wall -std=c99 -pedantic-errors
 override CXXFLAGS	?= -Wall -std=c++0x -pedantic-errors
-override LIBS			?= #-lm -lGL -lGLU -lglut
-override DEFINES 	?= #-DPOSIX
+override LIBS		?= #-lm -lGL -lGLU -lglut
+override DEFINES 	?= #-D_XOPEN_SOURCE 700
 
 #fortran
 override FF ?= gfortran
@@ -25,19 +25,19 @@ override OUT_EXT 	?= .elf
 override RUN ?= c			#basename without extension of file to run
 
 override ASSEMBLER_BASENAME ?= c.c
-override ASSEMBLE_EXT 			?= .c
-override DEBUG_DEFINE 			?=
-override DEBUG_FLAGS  			?=
-override PROFILE_DEFINE 		?= #-DDEBUG
-override PROFILE_FLAGS  		?= #
-override OPTIMIZE_FLAGS			?= #-O3
+override ASSEMBLE_EXT 		?= .c
+override DEBUG_DEFINE 		?=
+override DEBUG_FLAGS  		?=
+override PROFILE_DEFINE 	?= #-DDEBUG
+override PROFILE_FLAGS  	?= #
+override OPTIMIZE_FLAGS		?= #-O3
 
 RUN_BNAME 	:= $(RUN)$(OUT_EXT)
 
-INS 				:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
+INS			:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
 INS_NODIR 	:= $(notdir $(INS))
 OUTS_NODIR	:= $(patsubst %$(IN_EXT),%$(OUT_EXT),$(INS_NODIR))
-OUTS				:= $(addprefix $(OUT_DIR),$(OUTS_NODIR))
+OUTS		:= $(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
 .PHONY: all mkdir clean install ubuntu_install_deps
 
@@ -59,14 +59,14 @@ $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.f
 	$(FF) $(OPTIMIZE_FLAGS) $(FFLAGS) -o "$@" "$<" $(FFLIBS)
 
 run: all
-	( cd $(OUT_DIR) && ./$(RUN_BNAME) ) #run from out dir
+	cd $(OUT_DIR) && ./$(RUN_BNAME)
 
 assembler: mkdir $(IN_DIR)$(ASSEMBLER_BASENAME)
 	$(eval override OPTIMIZE_FLAGS := -O0)
 	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -S "$(IN_DIR)$(ASSEMBLE_BASENAME)" -o "$(OUT_DIR)$(ASSEMBLE_BASENAME).s"
 
 debug: clean set_debug_flags all
-	( cd $(OUT_DIR) && gdb "$(RUN_BNAME)" )
+	cd $(OUT_DIR) && gdb "$(RUN_BNAME)"
 
 set_debug_flags:
 	$(eval override DEBUG_FLAGS := -ggdb3)
@@ -74,7 +74,7 @@ set_debug_flags:
 	$(eval override OPTIMIZE_FLAGS := -O0)
 
 profile: clean set_profile_flags all run
-	( cd $(OUT_DIR) && gprof -b $(RUN_BNAME) gmon.out | tee "$(RUN_BNAME).profile_out" | less )
+	cd $(OUT_DIR) && gprof -b $(RUN_BNAME) gmon.out | tee "$(RUN_BNAME).profile_out" | less
 
 set_profile_flags:
 	$(eval override PROFILE_FLAGS := -p -pg)
@@ -82,7 +82,7 @@ set_profile_flags:
 	#$(eval override OPTIMIZE_FLAGS := -O0)
 
 run: all
-	( cd $(OUT_DIR) && ./$(RUN_BNAME) ) #run from out dir
+	cd $(OUT_DIR) && ./$(RUN_BNAME) #run from out dir
 
 clean:
 	rm -rf "$(OUT_DIR)"
