--- a/makefile.individual_out_bins
+++ b/makefile.individual_out_bins
@@ -34,10 +34,10 @@ override OPTIMIZE_FLAGS		?= #-O3
 
 RUN_BNAME 	:= $(RUN)$(OUT_EXT)
 
-INS			:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
+INS			:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)))
 INS_NODIR 	:= $(notdir $(INS))
-OUTS_NODIR	:= $(shell for f in $(INS_NODIR); do echo -n "$${f%.*} "; done )
-OUTS_NODIR	:= $(addsuffix $(OUT_EXT), $(OUTS_NODIR) )
+OUTS_NODIR	:= $(basename $(INS_NODIR))
+OUTS_NODIR	:= $(addsuffix $(OUT_EXT), $(OUTS_NODIR))
 OUTS		:= $(addprefix $(OUT_DIR), $(OUTS_NODIR))
 
 .PHONY: all clean debug set_debug_flags help mkdir profile set_profile_flags ubuntu_install_deps
