--- a/flex_bison/cpp/makefile
+++ b/flex_bison/cpp/makefile
@@ -8,19 +8,19 @@
 #have both those files in the same project!
 
 #compiler options
-override CC			:= g++
-override CFLAGS	?= -Wall -std=c++0x -pedantic
+CC			:= g++
+CFLAGS	?= -Wall -std=c++0x -pedantic
 
 #paths
-override AUX_DIR 						?= _out/
-override OBJ_EXT 						?= .o
-override IN_DIR 						?= ./
-override FLEX_EXT  				  ?= .l
-override BISON_EXT  				?= .y
-override IN_EXTS 						?= $(FLEX_EXT) $(BISON_EXT) .c .cpp
-override OUT_DIR 						?= $(AUX_DIR)
-override OUT_EXT 						?= .elf
-override OUT_BASENAME_NOEXT	?= a
+AUX_DIR 						?= _out/
+OBJ_EXT 						?= .o
+IN_DIR 						?= ./
+FLEX_EXT  				  ?= .l
+BISON_EXT  				?= .y
+IN_EXTS 						?= $(FLEX_EXT) $(BISON_EXT) .c .cpp
+OUT_DIR 						?= $(AUX_DIR)
+OUT_EXT 						?= .elf
+OUT_BASENAME_NOEXT	?= a
 
 INS 				:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
 INS_NODIR 	:= $(notdir $(INS))
