--- a/flex_bison/flex/makefile
+++ b/flex_bison/flex/makefile
@@ -1,15 +1,15 @@
 #compiler options
-override CC			:= gcc
-override CFLAGS	?= -Wall -std=c99 -pedantic -Wno-unused-function 
+CC			:= gcc
+CFLAGS	?= -Wall -std=c99 -pedantic -Wno-unused-function 
 
 #paths
-override AUX_DIR 						?= _out/
-override OBJ_EXT 						?= .o
-override IN_DIR 						?= ./
-override IN_EXTS 						?= .lex .c
-override OUT_DIR 						?= $(AUX_DIR)
-override OUT_EXT 						?= .elf
-override OUT_BASENAME_NOEXT	?= a
+AUX_DIR 						?= _out/
+OBJ_EXT 						?= .o
+IN_DIR 						?= ./
+IN_EXTS 						?= .lex .c
+OUT_DIR 						?= $(AUX_DIR)
+OUT_EXT 						?= .elf
+OUT_BASENAME_NOEXT	?= a
 
 INS 				:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
 INS_NODIR 	:= $(notdir $(INS))
