--- a/makefile.single_out
+++ b/makefile.single_out
@@ -1,25 +1,25 @@
 #compiles all c or cpp files in current dir into a single output file
 
-override ASSEMBLE_BASENAME 		?= a.c									#basename of the file to generate assembly code for
-override AUX_DIR 				?= _aux/
-override AUX_EXT 				?= .o
-override CC 					?= g++
-override CFLGS 					?= -Wall -std=c++0x -pedantic-errors
-override DEBUG_DEFINE 			?= 
-override DEBUG_FLAGS 			?= 
-override DEFINES 				?= #-DPOSIX 							#for -DDEBUG and -DPROFILE, used dedicated DEFINES
-override IN_EXTS 				?= .c .cc .cpp
-override IN_DIR 				?= ./
-override INCLUDE_DIRS 			?= #-L/usr/include/GL
-override LIBS 					?= #-lglut -lGLU -lGL
-override PREDEF 				?= #-DDEBUG -DPROFILE -DWINDOWS 		#preprocessor defines
-override RUN_ARGS 				?= #0 1									#passed as command line args to bin on run
-override OPTIMIZE_FLAGS			?= -O3
-override OUT_DIR 				?= _out/
-override OUT_BASENAME_NOEXT		?= cheat
-override OUT_EXT 				?= .elf
-override PROFILE_DEFINE 		?= 
-override PROFILE_FLAGS 			?= 
+ASSEMBLE_BASENAME 		?= a.c									#basename of the file to generate assembly code for
+AUX_DIR 				?= _aux/
+AUX_EXT 				?= .o
+CC 					?= g++
+CFLGS 					?= -Wall -std=c++0x -pedantic-errors
+DEBUG_DEFINE 			?= 
+DEBUG_FLAGS 			?= 
+DEFINES 				?= #-DPOSIX 							#for -DDEBUG and -DPROFILE, used dedicated DEFINES
+IN_EXTS 				?= .c .cc .cpp
+IN_DIR 				?= ./
+INCLUDE_DIRS 			?= #-L/usr/include/GL
+LIBS 					?= #-lglut -lGLU -lGL
+PREDEF 				?= #-DDEBUG -DPROFILE -DWINDOWS 		#preprocessor defines
+RUN_ARGS 				?= #0 1									#passed as command line args to bin on run
+OPTIMIZE_FLAGS			?= -O3
+OUT_DIR 				?= _out/
+OUT_BASENAME_NOEXT		?= cheat
+OUT_EXT 				?= .elf
+PROFILE_DEFINE 		?= 
+PROFILE_FLAGS 			?= 
 
 INS 		:= $(foreach IN_EXT, $(IN_EXTS), $(wildcard $(IN_DIR)*$(IN_EXT)) )
 INS_NODIR 	:= $(notdir $(INS))
@@ -43,16 +43,16 @@ $(AUX_DIR)%$(AUX_EXT): $(IN_DIR)%.cpp
 	$(CC) $(DEFINES) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(OPTIMIZE_FLAGS) $(PREDEF) $(INCLUDE_DIRS) $(CFLAGS) -c "$<" -o "$@"
 
 assembler: mkdir $(IN_DIR)$(ASSEMBLER_BASENAME)
-	$(eval override OPTIMIZE_FLAGS := -O0)
+	$(eval OPTIMIZE_FLAGS := -O0)
 	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -S "$(IN_DIR)$(ASSEMBLE_BASENAME)" -o "$(OUT_DIR)$(ASSEMBLE_BASENAME).s"
 
 debug: clean set_debug_flags all
 	gdb $(OUT)
 
 set_debug_flags:
-	$(eval override DEBUG_FLAGS := -ggdb3)
-	$(eval override DEBUG_DEFINE := -DDEBUG)
-	$(eval override OPTIMIZE_FLAGS := -O0)
+	$(eval DEBUG_FLAGS := -ggdb3)
+	$(eval DEBUG_DEFINE := -DDEBUG)
+	$(eval OPTIMIZE_FLAGS := -O0)
 
 profile: clean set_profile_flags all run
 	mv -f gmon.out "$(OUT_DIR)"
@@ -60,7 +60,7 @@ profile: clean set_profile_flags all run
 
 set_profile_flags:
 	$(eval PROFILE_FLAGS := -p -pg)
-	$(eval override PROFILE_DEFINE := -DPROFILE)
+	$(eval PROFILE_DEFINE := -DPROFILE)
 	#$(eval OPTIMIZE_FLAGS := )
 
 run: all
