balls working now that compiles with g++ instead of cc...

--- a/opengl/bouncing_balls/makefile
+++ b/opengl/bouncing_balls/makefile
@@ -1,23 +1,18 @@
-CC	:= cc
-LIBS 	:= -lGL -lGLU -lglut -lm
-#compile command
+CC		:= g++
+LIBS 	:= -lm -lGL -lGLU -lglut
 
-IN_EXT=.cpp
-#extension of input files
+IN_EXT 	:= .cpp
+IN_DIR 	:= ./
+OUT_DIR := _out/
+OUT_EXT :=
 
-IN_DIR=./
-#directory from which input files come. slash termianted.
+INS 		:= $(wildcard $(IN_DIR)*$(IN_EXT))
+INS_NODIR 	:= $(notdir $(INS))
+OUTS_NODIR 	:= $(patsubst %$(IN_EXT),%$(OUT_EXT),$(INS_NODIR))
+OUTS 		:= $(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
-OUT_DIR=_out/
-#dir where output files such as .pdf will be put. slash terminated.
-
-OUT_EXT=
-#extension of output
-
-INS=$(wildcard $(IN_DIR)*$(IN_EXT))
-INS_NODIR=$(notdir $(INS))
-OUTS_NODIR=$(patsubst %$(IN_EXT),%$(OUT_EXT),$(INS_NODIR))
-OUTS=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
+#RUN := one_ball
+RUN := multi_ball
 
 .PHONY: all mkdir clean
 
@@ -26,8 +21,11 @@ all: mkdir $(OUTS)
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%$(IN_EXT)
 	$(CC) -o "$@" "$<" $(LIBS)
 
+clean:
+	rm -rf $(OUT_DIR) $(AUX_DIR)
+
 mkdir:
 	mkdir -p "$(OUT_DIR)"
 
-clean:
-	rm -rf $(OUT_DIR) $(AUX_DIR)
+run: all
+	cd $(OUT_DIR) && ./$(RUN)$(OUT_EXT)
